--- a/index.html
+++ b/index.html
@@ -2,8 +2,218 @@
 <html>
  <head>
   <title>My Title</title>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+    * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+    }
+    html {
+      font-size: 10px;
+    }
+    body {
+      background: url('./bg_bggenerator_com.png');
+      background-position: 0 1000px;
+      font-family: 'Roboto', sans-serif;
+    }
+    .container{
+      max-width: 1100px;
+      margin: 0 auto;
+      padding: 0 3rem;
+      margin-top: 4rem;
+      text-align: center;
+    }
+    h1{
+      color: #398f51;
+      font-size: 5rem;
+      font-weight: 700;
+      letter-spacing: 8px;
+      margin-bottom: 2rem;
+    }
+    h2{
+      color: #777;
+      font-size: 4rem;
+      font-weight: 400;
+    }
+    .image{
+      margin-top: 10rem;
+      margin-bottom: 5rem;
+    }
+    p{
+      font-size: 2rem;
+      color:#777;
+      line-height: 5rem;
+      margin-bottom: 5rem;
+    }
+    .btn{
+      display: inline-block;
+      padding: 2.7rem 7.5rem;
+      background: #4CAF50;
+      font-size: 2rem;
+      text-decoration: none;
+      color: white;
+      border-radius: 10px;
+      transition: background 0.5s;
+      margin-bottom: 50px;
+      margin-top: 50px;
+    }
+    .btn:hover{
+      background: white;
+      color:#4CAF50;
+    }
+    #education {
+      font-family: Arial, Helvetica, sans-serif;
+      border-collapse: collapse;
+      width: 100%;
+    }
+
+    #education td, #education th {
+      border: 1px solid #ddd;
+      padding: 8px;
+    }
+
+    #education tr:nth-child(even){background-color: #f2f2f2;}
+
+    #education tr:hover {background-color: #ddd;}
+
+    #education th {
+      padding-top: 12px;
+      padding-bottom: 12px;
+      text-align: left;
+      background-color: #04AA6D;
+      color: white;
+    }
+    .topnav {
+      background-color: #333;
+      overflow: hidden;
+    }
+
+/* Style the links inside the navigation bar */
+    .topnav a {
+      float: left;
+      color: #f2f2f2;
+      text-align: center;
+      padding: 14px 16px;
+      text-decoration: none;
+      font-size: 17px;
+    }
+
+    /* Change the color of links on hover */
+    .topnav a:hover {
+      background-color: #ddd;
+      color: black;
+    }
+
+    /* Add a color to the active/current link */
+    .topnav a.active {
+      background-color: #04AA6D;
+      color: white;
+    }
+  </style>
  </head>
  <body>
-  <p>Hello World</p>
+   <div class="topnav">
+    <a class="active" href="#home">Home</a>
+    <a href="#about">About me</a>
+    <a href="#tpr">Technical Proficieny</a>
+    <a href="#edu">Education</a>
+    <a href="#wrk">Work Experience</a>
+   </div>
+   <div class="container">
+     <h1>Indrajeet Mahanta</h1>
+     <h2>Scholar at SAP</h2>
+     <div class="image">
+       <img src="./imageedit.png" alt="My Photo">
+     </div>
+       <h1 id="about"><a name="about"><u>ABOUT ME</u></a></h1>
+       <p>
+         I am a tech enthusiast currently working as an intern at SAP and pursuing my Masters at the same time.
+         I like learning about new technologies and implementing them to get a better idea.
+       </p>
+       <h1><u>TECHNICAL PROFICIENCY</u></h1>
+       <div class="container" id="tpr">
+         <a name="edu">
+         <table id="education">
+           <tr>
+             <td>Languages</td>
+             <td>Java, Ruby, C, Python(Basic), HTML, CSS</td>
+           </tr>
+           <tr>
+             <td>Framework</td>
+             <td>Ruby on Rails, Springboot, Cucumber, Selenium</td>
+           </tr>
+           <tr>
+             <td>Tools</td>
+             <td>Docker, Kubernetes, GIT, Jenkins</td>
+           </tr>
+           <tr>
+             <td>Platforms</td>
+             <td>Linux, Windows</td>
+           </tr>
+         </table>
+         </a>
+       </div>
+       <h1><u>EDUCATION</u></h1>
+       <div class="container" id="edu">
+         <a name="edu">
+         <table id="education">
+          <tr>
+            <th>Institute</th>
+            <th>Course</th>
+            <th>Year of Passing</th>
+            <th>Marks Scored</th>
+          </tr>
+          <tr>
+            <td>BITS Pilani</td>
+            <td>M.Tech</td>
+            <td>2022(Expected)</td>
+            <td>Ongoing</td>
+          </tr>
+          <tr>
+            <td>C.V Raman College of Engineering</td>
+            <td>B.Tech</td>
+            <td>2020</td>
+            <td>7.6</td>
+          </tr>
+          <tr>
+            <td>F.M Junior College</td>
+            <td>12th</td>
+            <td>2015</td>
+            <td>73%</td>
+          </tr>
+          <tr>
+            <td>Vikash Convent</td>
+            <td>10th</td>
+            <td>2013</td>
+            <td>91%</td>
+          </tr>
+        </table>
+        </a>
+      </div>
+      <div class="container">
+        <h1 id="wrk"><a name="wrk"><u>WORK EXPERIENCE</u></a></h1>
+        <div class="container">
+          <table id="education">
+            <tr>
+              <th>Team</th>
+              <th>Work done</th>
+              <th>Duration</th>
+            </tr>
+            <tr>
+              <td>SAP Successfactors ONB</td>
+              <td></td>
+              <td>8 months</td>
+            </tr>
+            <tr>
+              <td>SAP Conversational AI</td>
+              <td></td>
+              <td>6 months(Ongoing)</td>
+            </tr>
+          </table>
+        </div>
+      </div>
+     <a href="#" class="btn">Contact</a>
+   </div>
  </body>
 </html>
